--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
+    <title>Тестовая страница</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #b2ff59; /* Приятный зеленый фон */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+            border: 2px solid #4caf50;
+            padding: 20px;
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
+            color: #4caf50;
+            font-size: 2.5em;
+            margin: 0;
+        }
+        .decorative-element {
+            margin-top: 20px;
+            font-size: 1.5em;
+            color: #66bb6a;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My GitHub Page</h1>
-    <p>This is a simple static site hosted on GitHub Pages.</p>
+    <div class="container">
+        <h1>Привет, тут происходит тестирование</h1>
+        <div class="decorative-element">✿</div>
+        <div class="decorative-element">❀</div>
+    </div>
 </body>
 </html>
